--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
+    "build-prod": "webpack -p --env production",
     "start": "webpack-dev-server --watch",
     "start-server": "nodemon server/index.js"
   },
@@ -15,11 +16,12 @@
     "@babel/core": "^7.7.4",
     "@babel/preset-env": "^7.7.4",
     "@babel/preset-react": "^7.7.4",
-    "axios": "^0.19.0",
+    "axios": "^0.24.0",
     "babel-loader": "^8.0.6",
     "cors": "^2.8.5",
     "css-loader": "^3.3.0",
     "express": "^4.17.1",
+    "mini-css-extract-plugin": "^2.4.6",
     "nodemon": "^2.0.15",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
