--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "build": "webpack",
     "build-prod": "webpack -p --env production",
-    "start": "webpack-dev-server --watch",
-    "start-server": "nodemon server/index.js"
+    "start-server": "webpack-dev-server --watch",
+    "start": "npm run build-prod && node server/index.js"
   },
   "keywords": [],
   "author": "",
@@ -21,7 +21,6 @@
     "cors": "^2.8.5",
     "css-loader": "^3.3.0",
     "express": "^4.17.1",
-    "mini-css-extract-plugin": "^2.4.6",
     "nodemon": "^2.0.15",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -31,5 +30,8 @@
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0"
+  },
+  "devDependencies": {
+    "mini-css-extract-plugin": "^0.9.0"
   }
 }
